# pathformer

./: .gitignore  README.md  prepare_dataset.py  preprocess_dataset.py  pyproject.toml  setup.py  train.py
pathformer/datasets/: build_tokenizer.py  path_dataset.py  path_dataset_v2.py
pathformer/models/: simple.py  transformer.py  utils.py  value_multiplier_transformer.py
svg_preprocessing/: README  svgo.config.mjs
tests/: test_dataset_prep.py  test_dataset_prep_hf.py  test_model.py  test_parser.py
