[tool.poetry]
name = "pathformer"
version = "0.1.0"
description = ""
authors = ["admor <adrien_morvan@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
torchvision = "^0.17.1"
ndjson = "^0.3.1"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
